3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Prevent problems (crashes) for large item piles. Now limit nrof to less than
2^31.
--
common/object.c: In CAN_MERGE() pretend that the objects are not mergeable if
   the nrof sum would overflow.
common/porting.c: Fix buffer overflow for large numbers in ltostr10(). Also
   make n=1L<<31 work correctly.
plugins/cfpython/cfpython_object.c: In Object_SetQuantity() raise an exception
   for negative nrof values.
plugins/common/plugin_common.c: Reject negative nrof values in
   cf_object_set_nrof().
plugins/cfanim/include/cfanim_proto.h, plugins/common/include/plugin_common.h:
   Update prototype.
server/plugins.c: Treat negative nrof as nrof=0 when setting
   CFAPI_OBJECT_PROP_NROF property.
server/time.c: In move_duplicator() limit nrof of created items.
Andreas Kirschbaum 2005-10-29

Fix compiler warnings. Most changes do not change the program (remove unused
variables, convert "if(x = y)" into "x = y; if(x)"); a few actually fix
(possible) problems (fix uninitialized variables, fix printf format
specifiers, fix mismatches between signed and unsigned variables, add missing
return and default statements).
--
Affected files:
common/{arch.c,init.c,item.c,map.c,object.c,re-cmp.c,readable.c,region.c,
shstr.c}, crossedit/{Attr.c,Edit.c,Cnv/CnvPath.c}, include/sproto.h,
plugins/cfanim/cfanim.c, plugins/cfpython/{cfpython.c,cfpython_object.c},
plugins/cfpython/include/{cfpython_map_private.h,cfpython_object_private.h},
random_maps/{rogue_layout.c,special.c,square_spiral.c},
server/{apply.c,attack.c,build_map.c,c_misc.c,c_object.c,c_party.c,init.c,
main.c,monster.c,pets.c,player.c,plugins.c,shop.c,skill_util.c,spell_util.c,